--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
@@ -248,6 +248,10 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\NewsOne.cshtml" />
+    <Content Include="Views\Home\NewsTwo.cshtml" />
+    <Content Include="Views\Home\NewsThree.cshtml" />
+    <Content Include="Views\Home\News.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
