--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Home\NewsTwo.cshtml" />
     <Content Include="Views\Home\NewsThree.cshtml" />
     <Content Include="Views\Home\News.cshtml" />
+    <Content Include="Views\Home\Blogs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
