Mostly blog addition and other minor changes

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
@@ -253,6 +253,8 @@
     <Content Include="Views\Home\NewsThree.cshtml" />
     <Content Include="Views\Home\News.cshtml" />
     <Content Include="Views\Home\Blogs.cshtml" />
+    <Content Include="Views\Home\BlogsOne.cshtml" />
+    <Content Include="Views\Home\BlogsTwo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
