Added another blog and projects

--- a/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
+++ b/MVC_Bootstrap_Design/MVC_Bootstrap_Design/MVC_Bootstrap_Design.csproj
@@ -257,6 +257,11 @@
     <Content Include="Views\Home\Blogs.cshtml" />
     <Content Include="Views\Home\BlogsOne.cshtml" />
     <Content Include="Views\Home\BlogsTwo.cshtml" />
+    <Content Include="Views\Home\ProjectsOne.cshtml" />
+    <Content Include="Views\Home\ProjectsTwo.cshtml" />
+    <Content Include="Views\Home\ProjectsThree.cshtml" />
+    <Content Include="Views\Home\Projects.cshtml" />
+    <Content Include="Views\Home\BlogsThree.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
